--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <!-- Basic Page Needs
  ================================================== -->
-  <title>Ejercicio 1 - #mejorandogit</title>
+  <title>Ejercicio 1 Portafolio - #mejorandogit</title>
   <meta charset="utf-8" />
   <meta name="description" content="Mejorandogit - Cursos Mejorando.la">
   <meta name="author" content="Mejorando.la" />
@@ -32,37 +32,37 @@
     <section class="sidebar_information">
       <div class="sidebar_userimage">
          <!-- 1º Commit Tu nombre y foto -->
-        <img src="images/git.jpg">
+        <img src="images/foto-carlos-indriago-tecnologoweb.jpg">
         <h1 class="sidebar_information_title">
-          Escribe tu nombre
+          Carlos Indriago
         </h1>
       </div>
       <div class="comunidad-autoria">
         <div class="nombre">
           <!-- 2º Commit - Tu perfil Web -->
-          <p>Escribe tu perfil web</p>
+          <p>Desarrollador Web Profesional</p>
         </div>
       </div>
     </section>
     <ul>
       <li>
-        <a href="#" target="_blank">
+        <a href="http://facebook.com/mt2435" target="_blank">
           <!-- 3º Commit - Redes Sociales -->
           <p>Facebook</p>
         </a>
       </li>
       <li>
-        <a href="#" target="_blank">
+        <a href="http://twitter.com/tenologoweb" target="_blank">
           <p>Twitter</p>
         </a>
       </li>
       <li>
-        <a href="#" target="_blank">
+        <a href="http://linkedin.com/tecnologoweb" target="_blank">
           <p>LinkedIN</p>
         </a>
       </li>
       <li>
-        <a href="#" target="_blank">
+        <a href="http://github.com/tecnologoweb" target="_blank">
           <p>GitHub</p>
         </a>
       </li>
@@ -73,16 +73,16 @@
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido</h3>
-      <p>Tu descripción</p>
+      <p>Soy un profesional web que crea tecnología para el beneficio de la humanidad</p>
     </div>
 
     <div class="bloque">
       <!-- 5º Commit - Tu portafolio -->
       <h3>Tu portafolio</h3>
-      <a href="#"><p>Nombre de tu sitio</p></a>
-      <a href="#"><p>Nombre de tu sitio</p></a>
-      <a href="#"><p>Nombre de tu sitio</p></a>
-      <a href="#"><p>Nombre de tu sitio</p></a>
+      <a href="http://mismuesbles.com"><p>Mis Muebles</p></a>
+      <a href="http://executivesrentacar.com"><p>Rent a Car</p></a>
+      <a href="http://danotours.com.ve"><p>Dano Tours</p></a>
+      <a href="http://webysoftwarevenezuela.com"><p>Web y Software Venezuela</p></a>
     </div>
   </div>
     
